name:                orlin-interp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicball/orlin-interp#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Ballard
maintainer:          znhihgiasy@gmail.com
copyright:           reserved
category:            hobby
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable orlin-interp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
